--- a/localtrip-auth-core/build.gradle
+++ b/localtrip-auth-core/build.gradle
@@ -25,6 +25,8 @@ dependencyManagement {
 }
 
 dependencies {
+
+	api(project(":localtrip-common"))
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation("org.springframework.boot:spring-boot-autoconfigure")
